@@ -1,3 +1,7 @@
+2007-01-16 Sandro Santilli <strk@refractions.net>
+
+	* tests/xmltester/XMLTester.cpp: don't include catch-all headers.
+
 2007-01-09 Sandro Santilli <strk@refractions.net>
 
 	* source/operation/buffer/: Makefile.am, OffsetCurveVertexList.h:
